--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div id="root">
+    <div id="root" class="root">
         <h1>Hey There!</h1>
     </div>
 
-<script type="module" src="./App.js">
+    <div id="head" class="root">
+    </div>
+<script type="module" src="./src/App.js">
     
 </script>
 </body>
